--- a/main.tex
+++ b/main.tex
@@ -87,6 +87,7 @@
 \input{secciones/capitulo2}
 \input{secciones/capitulo3}
 % \input{secciones/capitulo4}
+\input{secciones/capitulo5.tex}
 % \input{secciones/conclusiones}
 \input{secciones/recomendaciones} % sección opcional
 
