--- a/main.tex
+++ b/main.tex
@@ -27,6 +27,9 @@
 \usetikzlibrary{positioning, shapes, arrows.meta}
 % Incluir acá los paquetes adicionales que deseas. 
 \usepackage{comment}
+\usepackage{booktabs}
+\usepackage{tabularx}
+
 % Ubicación de los imágenes.
 \graphicspath{images/}
 
@@ -89,7 +92,7 @@
 % \input{secciones/capitulo4}
 \input{secciones/capitulo5.tex}
 % \input{secciones/conclusiones}
-\input{secciones/recomendaciones} % sección opcional
+% \input{secciones/recomendaciones} % sección opcional
 
 %% ============================================================================
 \renewcommand{\bibname}{\hfill\Large\bf{REFERENCIAS BIBLIOGRÁFICAS}\hfill}
