Actualizo metodología(fase I y fase II) y ajustes de caratula

--- a/main.tex
+++ b/main.tex
@@ -47,8 +47,8 @@
 \frontmatter
 
 \department{CIENCIA DE LA COMPUTACIÓN}
-\degree{... }
-\major{...}
+\degree{BACHILLER }
+\major{CIENCIAS DE LA COMPUTACIÓN}
 
 \title{UN ENFOQUE HÍBRIDO: GAIT-BASED PERSON RE-ID}
 
